# LFU

./: CMakeLists.txt  README.md  bash_scrypt  main.cpp
idealalg/include/: ideal.h
idealalg/src/: a.out  ideal.cpp  ideal_main.cpp
idealalg/test/: cache_test.cpp
lfu/include/: lfu.h
lfu/src/: lfu.cpp  lfu_main.cpp
lfu/test/: cache_test.cpp
test_generate/: a.out  test_generate.cpp  unit_tests.cpp
